Fix get started button alignment over small screen

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,3 +28,13 @@
   --ifm-color-primary-lightest: #69b1ff;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+.enroll-buttons {
+  gap: 36px;
+  margin-top: 36px;
+}
+@media screen and (max-width: 640px) {
+  .enroll-buttons {
+    flex-direction: column;
+    align-items: center;
+  }
+}
